--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Work</a></li>
+          <li><a class="nav-link scrollto" href="/work.html">Work</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -49,13 +49,17 @@
   <!--hero -->
   <section id="hero" class="d-flex justify-content-center align-items-center text-center">
     <div class="col-lg-6 content">
-        <div class="pt-4 pt-lg-0 " data-aos="fade-up" data-aos-delay="200">
+        <div class="pt-4 pt-lg-0 p-3" data-aos="fade-up" data-aos-delay="200">
           <h1>Better Robust Solutions For Your Business.</h1>
           <h2>We are a team of passionate web developers offering impactful remedies to businesses.</h2>
           <div class="d-flex justify-content-center">
-            <a href="#contact" class="btn btn-reachUs scrollto">Talk To Us</a>
+            <a href="" class="btn btn-reachUs scrollto">Talk To Us</a>
+            
           </div>
         </div>
+    </div>
+    <div class="col-lg-4 ">
+      <img src="img/digital.png" class="image-fluid animate" alt="animating image">
     </div>
   </section>
   <main id="main">
